--- a/wiki/Ordering.wiki
+++ b/wiki/Ordering.wiki
@@ -2,38 +2,7 @@
 #labels Featured
 
 = OpenEVSE boards =
+OpenEVSE boards, parts and accessories can be ordered from the [http://openevse-store.myshopify.com/ OpenEVSE Store] 
 
-The waiting list for Prebuilt boards is currently about 4 weeks, current batch of OpenEVSE PLUS v2 boards are sold out a new batch has been ordered and are expected Mid June. 
-
-= Parts list =
-
-Prices $USD
-|| *Part* || *Kit* || *Built* || Status ||
-|| OpenEVSE Plus || $135 || $155 || In Stock soon - August 1 ||
-|| RGB LCD backpack || $30 || $40 || Available ||
-|| RGB LCD backpack with RTC || $40 || $50 || Available ||
-|| EV Simulator || $15 || || Available || 
-|| Shipping US || $5 || || ||
-|| Shipping Fedex\UPS\DHL || At Cost || || Request ||
-|| || || || ||
-|| *Kit Package:* _OpenEVSE Plus (v2), RGB LCD, w/std US shipping_ || *$165* || || Out of Stock - May/June Batch ||
-|| *Built Package:* _OpenEVSE Plus (v2), RGB LCD, Assembled & Tested, w/std US shipping_ ||  || *$200* || Out of Stock - May/June Batch ||
-|| *Upgrade LCD with RTC* || add $10 || || ||
-|| *International Shipping || add $25 || || ||
-
-
-
-= Ordering =
-
-*All orders are via paypal.* Send payment to *chris1howell83@gmail.com*
- * Be sure to include a note with payment of what you are ordering.
- * Orders must be paid before they are processed/shipped
- * Payment fully refundable up until parts ship
- 
-OpenEVSE boards are available is kit form with all small components pre-soldered or built in limited quantities.
-
-January [http://code.google.com/p/open-evse/wiki/January?ts=1356125971&updated=January Link]
-
-February/March/April [http://code.google.com/p/open-evse/wiki/February?ts=1360551823&updated=February Link]
-
+Previous Batch
 May/June/July  [http://code.google.com/p/open-evse/wiki/May_June_July Link]
