--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -1,6 +1,9 @@
 #summary May/June Batch.
 
 = Introduction =
+
+*Update 8/5* The final boards are kitted/built, over the next days or two they will be packaged up, shipping labels printed and they will be on their way...
+
 *Update 7/26* They made it... I will kit them up and build as fast as I can...
 
 *Update 7/25* Remaining 90 are at the sort facility in Burbank they are expected to arrive tomorrow 7/26.
