Edited wiki page May_June_July through web user interface.

--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -104,3 +104,4 @@ Payment via paypal to chris1howell83@gmail.com
 || 46 || cyrille.coudyser || built || RTC - EVSim || Paid || Packaging ||
 || 47 || cyrille.coudyser || built || RTC || Paid || Packaging ||
 || 48 || charliebarrett || built || RTC - EVsim || Paid || Packaging ||
+|| 49 || c_brenny || kit || RTC kit - EV sim || Paid || Packaging ||
