--- a/wiki/OpenEVSE_boards.wiki
+++ b/wiki/OpenEVSE_boards.wiki
@@ -1,21 +1,20 @@
 #summary Comparison OpenEVSE boards.
 #labels Featured
 
-|| || OpenEVSE Plus || Arduino Shield || Through Hole ||
-|| Picture ||http://farm8.staticflickr.com/7247/8169379635_84f577e1f3_n.jpg||http://farm7.staticflickr.com/6222/7003031805_747830f4b7_n.jpg||http://farm9.staticflickr.com/8370/8437977311_28677cea78_n.jpg||
-|| || Built and Kit || DIY - Files only  || DIY - Files only ||
-|| Current HW version || OpenEVSE Plus v2 || OpenEVSE shield v1 || DIY EVSE v4.2 || 
-|| Firmware || pre-loaded || Requires Arduino UNO || Requires ISP programmer ||
-|| Power Supply || Integrated 4W || External || External || 
+|| || Built || Quick Kit || DIY Through Hole ||
+|| Picture ||http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_7674_medium.jpg?186||http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_7705_medium.jpg?186|| http://cdn.shopify.com/s/files/1/0249/6207/products/IMG_8024_medium.jpg?186 ||
+|| || Built || Quick Kit  || DIY kit ||
+|| Build time (board) || N/A || 10 - 15 min || 1 - 2 hours ||
+|| Current HW version || OpenEVSE Plus v2 || OpenEVSE Plus v2 || DIY OpenEVSE Plus || 
+|| Firmware || pre-loaded || pre-loaded || pre-loaded ||
+|| Power Supply || Integrated 4W || Integrated 4W || Integrated 4W || 
 || GFCI || Yes || Yes || Yes ||
 || Diode Check || Yes || Yes || Yes ||
-|| Ground/Stuck Relay Check || Yes || With Advanced Power Supply || Yes ||
-|| Size || 2.2"x 1.75"x 1/2" || 3" x 2" x 1" || 3.32" x 2.55" x 1/2" ||
-|| IO pins || I2C and FTDI || all pins accessible || all pins accessible ||
-|| Programmer || ISP or FTDI || ISP or USB/FTDI || ISP or FTDI ||
-|| Serial ||  FTDI || USB/FTDI || FTDI || 
-|| Suited for || Most EVSEs || Hardware/Software Development || Hardcore DIYers ||
-|| Price || $135 Kit $155 Built || $45 plus Arduino Uno (~$30) || Board $15 + components ~$75  ||
-|| || $175 w/LCD, RTC, & shp (Kit)  || || ~$120 w/V42 RGB LCD, RTC, & shp ||
+|| Ground/Stuck Relay Check || Yes || Yes || Yes ||
+|| Size || 2.2"x 1.75"x 1" || 2.2"x 1.75"x 1" || 3.32" x 2.55" x 1" ||
+|| IO pins || I2C and FTDI || I2C and FTDI || I2C and FTDI ||
+|| Programmer || ISP || ISP || ISP ||
+|| Serial ||  FTDI || FTDI || FTDI || 
+|| Suited for || Most EVSEs || Builders who don't mind light soldering || Hardcore DIYers ||
+|| Price || $165 || $125 || $75  ||
 
-How to use the OpenEVSE board to make a [ExampleEVSE basic EVSE].
