--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -4,6 +4,8 @@
 = Introduction =
 OpenEVSE was designed to be fully compliant with the J1772:2010 Standard and should be compatible with J1772 Electric Vehicles.
 
+There are currently no known incompatibilities with any vehicle or vehicle feature.
+
 = Vehicles Tested =
 OpenEVSE Plus has been tested with:
 || Year || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
@@ -16,7 +18,7 @@ OpenEVSE Plus has been tested with:
 || 2013 || Ford || C-Max Energi || Timers - Supported || 3.3kW - 16A @ 240V || None ||
 || 2011 || TH!NK || City EV || || 3.3kW - 16A @ 240V || None ||
 || 2013 || Honda || Fit || || 6.6kw - 30A @ 240V || None ||
-|| 2013 || Renault || Zoe || || ||
+|| 2013 || Renault || Zoe || || || None ||
 || All || Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || None ||
 || All || Tesla || Model S || with J1772 adapter || 10kW - 40A @ 240V or 20kw - 80A @ 240V || None ||
 
