--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -3,20 +3,13 @@
   * *OpenEVSE*
     * [OpenEVSE_boards OpenEVSE boards]
     * [OpenEVSE_Compatibility Compatibility]
-    * [OpenEVSE_Plus_spec OpenEVSE PLUS]
-    * [OpenEVSE_LCD_spec RGB LCD]
     * [theory_of_operation Theory of Operation]
-  * *EVSE Charging Stations*
-    * [Open_EVSEs EVSE Example Pictures]
-    * [AssemblePlusV2 30A EVSE by mrpilotron]
-    * [EVSE_EV_ChargeAmerica_Upgrade Rebuild of broken EVCA EVSE]
-    * [75AOpenEVSE 75A EVSE by mwolrich]
-    * [EVSE_LORDSn1per EVSE by Phillip Carlson]
-    * [EVSE_by_4Dolio 30A portable EVSE by 4Dolio]
-    * [EVSE_by_scutzi128 OpenEVSE 30A by Jacob Scutzlas]
-    * [EVSE_by_rbeebe OpenEVSE 30A by Rick Beebe]
-    * [YetAnotherOpenEVSE Portable EVSE by nsayer]
-    * [Hydra The J1772 Hydra by nsayer]
+  * *Product Information - Build Guides*
+    * [OpenEVSE_Plus_spec Quick Kit - OpenEVSE PLUS]
+    * [OpenEVSE_LCD_spec Quick Kit - OpenEVSE LCD]
+    * [OpenEVSE_DIY_Plus_spec DIY Kit - OpenEVSE PLUS]
+    * [OpenEVSE_DIY_LCD_spec DIY Kit - OpenEVSE LCD]
+    * [EVSimulator - OpenEVSE EV Simulator]
   * *SAE J1772 Standard*
     * [J1772Basics Basics of J1772] 
     * [J1772CableSources Sources for J1772 cables]
@@ -30,23 +23,29 @@
     * [MaxCurrent Set Default Current]
     * [OpenEVSE_WiFi Add WiFi to OpenEVSE]   
     * [AssemblePlusV2 Build EVSE Plus V2 kit]
-    * [AssemblyGuide] 30A OpenEVSE Plus v1/v2
-    * [EVSimulator] Assembly and Usage
-  * *Workshops*
-    * [OpenEVSE_Workshop Socal OpenEVSE Workshop December 1,2012]
-    * [Workshop_NOCAL Northern Ca OpenEVSE Workshop May 18, 2013]
-  * *Do it Yourself*
-    * [OpenEVSEv1partslist Parts list to DIY V1]
-    * [OpenEVSEv2partslist Parts list for DIY V2]
-    * [OpenEVSEv4partslist Parts list for DIY V4]
-    * [OpenEVSEv42partslist Parts list for DIY V4.2]
-    * [PCBProduction Have your PCB fabricated]
+    * [AssemblyGuide] 30A OpenEVSE Plus v1/v2  
   * *Testing*
     * [EVSE_TESTING Testing your EVSE]
   * *Support*
     * [Support Need Help?]
   * *Ordering*
     * [Ordering Order OpenEVSE and kits]
+  * *Workshops*
+    * [OpenEVSE_Workshop Socal OpenEVSE Workshop December 1,2012]
+    * [Workshop_NOCAL Northern Ca OpenEVSE Workshop May 18, 2013]
+  * *Builders Project pictures/Logs*
+    * [Open_EVSEs EVSE Example Pictures]
+    * [AssemblePlusV2 30A EVSE by mrpilotron]
+    * [EVSE_EV_ChargeAmerica_Upgrade Rebuild of broken EVCA EVSE]
+    * [75AOpenEVSE 75A EVSE by mwolrich]
+    * [EVSE_LORDSn1per EVSE by Phillip Carlson]
+    * [EVSE_by_4Dolio 30A portable EVSE by 4Dolio]
+    * [EVSE_by_scutzi128 OpenEVSE 30A by Jacob Scutzlas]
+    * [EVSE_by_rbeebe OpenEVSE 30A by Rick Beebe]
+    * [YetAnotherOpenEVSE Portable EVSE by nsayer]
+    * [Hydra The J1772 Hydra by nsayer]
+   
+
 
 
 
