--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -23,7 +23,8 @@
     * [FAQ FAQ]
   * *How to...*
     * [MaxCurrent Set Default Current]
-    * [OpenEVSE_WiFi Add WiFi to OpenEVSE]   
+    * [OpenEVSE_WiFi Add WiFi to OpenEVSE]
+    * [Soldering Soldering Guide]   
     * [AssemblePlusV2 Build EVSE Plus V2 kit]
     * [AssemblyGuide] 30A OpenEVSE Plus v1/v2  
   * *Testing*
