--- a/wiki/sidebar.wiki
+++ b/wiki/sidebar.wiki
@@ -24,7 +24,7 @@
   * *How to...*
     * [MaxCurrent Set Default Current]
     * [OpenEVSE_WiFi Add WiFi to OpenEVSE]
-    * [How_to_solder Soldering Guide]   
+    * [How_to_Solder Solder]   
     * [AssemblePlusV2 Build EVSE Plus V2 kit]
     * [AssemblyGuide] 30A OpenEVSE Plus v1/v2  
   * *Testing*
