--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -48,8 +48,7 @@ The board has the following interface points:
   * 1 4 pin I2C header for the LCD
   * 1 6 pin ISP socket for programming
 
-There are 4 things on the board that require some attention:
-  * The four zener diodes listed in the schematic are wrong. Eagle didn't come with a 2.4 volt zener diode, so I picked a close one. The diodes in the BOM are correct.
+There are 2 things on the board that require some attention:
   * R8 is a 2.7k resistor that runs between proximity and ground. Some (most? all?) J1772 inlets come with a 2.7k resistor installed between proximity and ground. If yours does, then do not install R8.
   * R14 and R17 are burden resistors for the CT coils. These need to be chosen based on the CT you're going to use and the maximum outlet current rating for your Hydra. For my prototype, the CTs I've selected have a Te of 1018 and the design current for the Hydra will be 30A. For that configuration, a 56 ohm resistor is appropriate. You'll also find a #define in the source code for the Hydra that you will need to adjust in concert with this. Customizing the burden resistor allows you to maximize the accuracy of the ammeter readings for each car.
 
@@ -99,9 +98,11 @@ Apart from that, the prototype proved the basic design on the bench and the soft
 
 Meanwhile, I am going to finish the mechanical assembly of the prototype this evening (8/6/13) and bring it to work tomorrow.
 
+I have made the changes to the Eagle files and added them to the downloads. The hardware is officially v0.9. I am going to build a 0.9 board for the prototype and to validate the 0.9 design. If it has no errors, I'll re-label it as 1.0.
+
 = Future plans =
 
-First, I am going to complete the prototype and debug it. Once the design is field-proven, I will either get OSHPark to add the board to their single-unit-quantity store or I will sell boards for $20 each plus shipping (that's about my cost).
+First, I am going to complete the second prototype and debug it. Once the v0.9 design is field-proven, I will either get OSHPark to add the board to their single-unit-quantity store or I will sell boards for $16 each plus shipping (that's about my cost).
 
 The circuit board BOM from DigiKey is around $45 + tax and shipping. The chassis BOM (2 relays, 2 CTs, a pair of M-M-F quick connect adapters and a 12vdc power supply) is around $85 + tax and shipping. A J1772 inlet is $120 from Modular EV Power and J1772 cables are $150 each from Leviton. A box and two cable glands are around $50 from Polycase. So just in parts alone, a Hydra costs close to $700.
 
