--- a/wiki/OpenEVSE_Compatibility.wiki
+++ b/wiki/OpenEVSE_Compatibility.wiki
@@ -11,6 +11,7 @@ OpenEVSE Plus has been tested with:
 || Year || Make || Model || Car Specific Features || Onboard Charger || Known Issues ||
 || All || Nissan || LEAF || Timers - Supported || 6.6kW - 32A @ 240V || None ||
 || All || Chevy || VOLT || Timers - Supported || 3.3kW - 16A @ 240V || None ||
+||2013|| Chevy||Spark ||Timers - Supported || 3.3kW - 16A @240V ||None||
 || All || Toyota|| PiP || Timers - Supported || 2.8kW - 12A @ 240V || None ||
 || All || Toyota || Rav4 EV || || 10kw - 40A @240V || None ||
 || All || Mitsubishi || i-MiEV || || 3.3kW - 16A @ 240V || None ||
@@ -19,6 +20,7 @@ OpenEVSE Plus has been tested with:
 || 2011 || TH!NK || City EV || || 3.3kW - 16A @ 240V || None ||
 || 2013 || Honda || Fit || || 6.6kw - 30A @ 240V || None ||
 || 2013 || Renault || Zoe || || || None ||
+||2013|| BMW ||Active E ||Timers - Supported || ||
 || All || Tesla || Roadster || with J1772 adapter || 16.8kW - 70A @ 240V || None ||
 || All || Tesla || Model S || with J1772 adapter || 10kW - 40A @ 240V or 20kw - 80A @ 240V || None ||
 
