--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -2,7 +2,7 @@
 
 = The Hydra =
 
-We have 6 L2 J1772 chargers and a ChaDEmo at work. For various reasons, my colleagues are more politically attuned to EV ownership than the general population, even here in the SF Bay area. So those chargers are oversubscribed. What makes it worse is that most of those cars are Leafs, which only charge from those L2 chargers at 15A. Since the chargers are 30A, half the potential is being wasted. Why they don't just use the ChaDEmo is beyond me.
+We have 6 L2 J1772 chargers and a CHAdeMO at work. For various reasons, my colleagues are more politically attuned to EV ownership than the general population, even here in the SF Bay area. So those chargers are oversubscribed. What makes it worse is that most of those cars are Leafs, which only charge from those L2 chargers at 15A. Since the chargers are 30A, half the potential is being wasted. Why they don't just use the CHAdeMO is beyond me.
 
 It would be easy to make a box with a square wave generator to dummy up a pilot to feed two cars from a J1772 inlet, but that would neither be spec compliant, nor safe. No, the correct thing to do is to intelligently allocate the incoming power to the two cars as needed.
 
@@ -14,10 +14,10 @@ The Hydra owes much of its existence to OpenEVSE. Some of its circuitry was crib
 
   * A comparator to convert the incoming pilot signal into a TTL compatible square wave so that the controller can determine the duty cycle, and thus, the ampacity of the host EVSE.
   * A comparator to watch for transitions on the incoming proximity pin. The controller will gracefully shut down both cars if the proximity resistance rises above 300 ohms (or so).
-  * Two pilot signal generators. OP Amps are used to convert digital outputs from the controller into + or - 12 volt outputs. The PWM timer systems of the controller will be used to generate the varying duty cycles.
+  * Two pilot signal generators. OP Amps are used to convert digital outputs from the controller into + or - 12 volt outputs. The PWM timer systems of the controller are used to generate the varying duty cycles.
   * Resistor networks feed the outgoing pilots back into the controller on two analog pins so that state changes and diode failures on each car can be detected.
-  * Each car will have a current transformer on one of its hot leads so that the car's current draw can be monitored. If a car exceeds its allocated current, it will be shut down.
-  * The Hydra will have an RGB LCD display to show status information.
+  * Each car has a current transformer on one of its hot leads so that the car's current draw can be monitored. If a car exceeds its allocated current, it is shut down.
+  * The Hydra has an RGB LCD display to show status information.
 
 The software in the Hydra has the following rules:
 
@@ -25,8 +25,8 @@ The software in the Hydra has the following rules:
   * If one car is charging, it gets 100% and the other car gets 50%.
   * If both cars are charging, both cars get 50%.
   * If both cars are charging and one stops, the other pilot is immediately raised to 100%. The car that stopped continues to get 50% in accordance with the above rules.
-  * If only one car is charging, and the other enters state C, it will be given a 10 second delay. During that delay, the other car's pilot will be reduced to 50% and it will have 5 seconds to respond and reduce its draw. After the delay, the second car's power will be turned on.
-  * If any car exceeds its current allowance for 5 seconds, it is errored out.
+  * If only one car is charging, and the other enters state C, it will be given a delay. During that delay, the other car's pilot is reduced to 50% and it will be given a brief interval to respond and reduce its draw. After the delay, the second car's power will be turned on.
+  * If any car exceeds its current allowance for for too long, it is errored out.
   * If any car fails a diode check at any time, it is errored out.
   * If any car enters an invalid state (7.5 volts, for instance - between B and C), it is errored out.
   * If the incoming pilot drops below the 12A minimum (because that's the smallest that can legally be split in half) or stops being a valid pilot, both cars are errored out.
@@ -34,8 +34,6 @@ The software in the Hydra has the following rules:
   * If a car is errored out, its plug must return to state A to clear the error (so pull the plug out and reinsert it).
 
 The Hydra does not attempt to detect L1 vs L2 - it only cares about amps. It also doesn't attempt to detect ground faults - the source EVSE is assumed to have its own GFCI. Also, my prototype does not include fuses or breakers - again, the source EVSE is assumed to have over-current protection.
-
-A this point, there are Eagle files with a schematic and board layout. The prototype boards have been ordered from OSHPark and two DigiKey BOMs have been created - one for the board parts, one for the chassis components. Apart from that one would need to buy an RGB LCD (either Chris' OpenEVSE display or an AdaFruit RGB LCD shield), two J1772 cable/plug assemblies, a J1772 inlet and a chassis/cabinet/box in which to install it all.
 
 The board has the following interface points:
 
@@ -46,7 +44,8 @@ The board has the following interface points:
   * 1 two pin terminal that brings 12 VDC from an external power supply
   * 1 two pin terminal that connects to an external power switch. This switch switches the inlet pilot resistance from state B to state C when closed. Optionally, you can simply jumper the terminal if you would rather.
   * 1 4 pin I2C header for the LCD
-  * 1 6 pin ISP socket for programming
+  * 1 2x3 pin ISP socket for programming
+  * 1 6 pin FTDI header for serial I/O (for debugging or future expansion)
 
 There are 2 things on the board that require some attention:
   * R8 is a 2.7k resistor that runs between proximity and ground. Some (most? all?) J1772 inlets come with a 2.7k resistor installed between proximity and ground. If yours does, then do not install R8.
@@ -120,6 +119,16 @@ You will need:
 The circuit board BOM from DigiKey is around $45 + tax and shipping. The chassis BOM (2 relays, 2 CTs, a pair of M-M-F quick connect adapters and a 12vdc power supply) is around $85 + tax and shipping. A J1772 inlet is $120 from Modular EV Power and J1772 cables are $150 each from Leviton. A box and two cable glands are around $50 from Polycase. So just in parts alone, a Hydra costs close to $700.
 
 Note that the circuit board BOM includes R8. Do not populate R8 if your inlet has a 2.7K resistor installed between proximity and ground. Also, note that R14 and R17 have been chosen with the presumption that your outgoing current limit is 30A and you're using the CTs on the chassis BOM.
+
+= Burden resistor calculations =
+
+R14 and R17 must be matched to both your CT and your maximum expected outlet current. The reference design has a 30A maximum outlet current and the CT has a Te rating of 1018.
+
+You must select the largest Rb value you can such that the maximum peak-to-peak voltage does not exceed 5 volts. Take the maximum current and divide it by Te. The maximum current is an RMS value, however, so to convert it to peak-to-peak, multiply by 2 * sqrt(2). Divide 5 by the result and select the next smaller standard resistor value. That's the value to use for R14 and R17. Be sure to buy precision resistors. The BOM specs 1%.
+
+If you change the values of R14 or R17 and/or the CT, then you must change the CURRENT_SCALE_FACTOR constant in the code to match.
+
+Divide Rb by Te to get volts per amp. Divide that value by (5/1024) to get units per amp. Divide 1000 by units per amp to get milliamps per unit, which is the value of CURRENT_SCALE_FACTOR.
 
 = Resources =
 
