--- a/wiki/Hydra.wiki
+++ b/wiki/Hydra.wiki
@@ -95,7 +95,7 @@ I got the first boards back from OSH Park over the last weekend (8/3/13) and ass
 
 Apart from that, the prototype proved the basic design on the bench and the software has progressed from alpha to beta. When I have made the proposed changes, I will release the Eagle board and schematic files as hardware version 1.0.
 
-Meanwhile, I am going to finish the mechanical assembly of the prototype this evening (8/6/13) and bring it to work tomorrow.
+Meanwhile, the prototype design has been used at our office for a week now and has worked flawlessly (after a firmware update or three).
 
 I have made the changes to the Eagle files and added them to the downloads. The hardware is officially v0.9. I am going to build a 0.9 board for the prototype and to validate the 0.9 design. If it has no errors, I'll re-label it as 1.0.
 
@@ -130,7 +130,14 @@ If you change the values of R14 or R17 and/or the CT, then you must change the C
 
 Divide Rb by Te to get volts per amp. Divide that value by (5/1024) to get units per amp. Divide 1000 by units per amp to get milliamps per unit, which is the value of CURRENT_SCALE_FACTOR.
 
+= Firmware details =
+
+The firmware depends on the LiquidTWI2 library to drive the LCD, and the PWM library to support altering the PWM frequency on the digital pins so that they can be used to drive the pilot outputs.
+
+
 = Resources =
 
   * [http://github.com/nsayer/hydra Software repository for the Hydra]
+  * [http://code.google.com/p/arduino-pwm-frequency-library PWM library]
+  * [http://github.com/lincomatic/LiquidTWI2 LiquidTWI2 library]
   * [http://oshpark.com/profiles/nsayer OSHPark store for Hydra boards]
