--- a/wiki/May_June_July.wiki
+++ b/wiki/May_June_July.wiki
@@ -97,7 +97,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 39 || maxxiss8 INT || Built || || Paid || Shipped 8/12 ||
 || 40 || maxxiss8 INT || Built || || Paid || Shipped 8/12 ||
 || 41 || lemans4 INT || kit || RTC || paid || Shipped 8/12 ||
-|| 42 || nikolay || built || RTC - EVsim || Paid || Packaging ||
+|| 42 || nikolay || built || RTC - EVsim || Paid || Shipped 8/12 ||
 || 43 || f4aii INT || kit || RTC || Paid || Shipped 8/12 ||
 || 44 || markus.fuchs-winkler || kit || LCD || Paid || Shipped 8/12 ||
 || 45 || schuck-electronics || kit || RTC || Paid || Shipped 7/29 ||
